# online-education

./: .bazelignore  .gitignore  BUILD  WORKSPACE  bazel-online-education  dependencies.yaml
.circleci/: config.yml
.github/workflows/: create_new_service.yml  deploy.yml  main.yml
bazel/: junit.bzl
lambda_template/: BUILD  readme.md  template.yaml
lambda_template/command/: HelloWorldCommand.java
lambda_template/server/: Component.java  ServiceHandler.java
src/main/java/com/amazonaws/http/: AWSRequestSigningApacheInterceptor.java  BUILD
src/main/java/com/online_education/course/: BUILD.bazel  template.yaml
src/main/java/com/online_education/course/command/: CourseCreateCommand.java  CourseGetCommand.java  CourseUpdateCommand.java
src/main/java/com/online_education/course/server/: CourseComponent.java  CourseServiceHandler.java
src/main/java/com/online_education/dagger/: BUILD.bazel  ObjectMapperModule.java
src/main/java/com/online_education/dagger/AWSResourceModule/: DynamoDBModule.java  ElasticSearchModule.java
src/main/java/com/online_education/dao/course/: BUILD.bazel  Course.java  CourseDao.java  CourseDaoImpl.java  CourseDaoModule.java
src/main/java/com/online_education/dao/student/: BUILD  Student.java  StudentDao.java  StudentDaoImpl.java  StudentDaoModule.java
src/main/java/com/online_education/dao/teacher/: BUILD  Teacher.java  TeacherDao.java  TeacherDaoImpl.java  TeacherDaoModule.java
src/main/java/com/online_education/finance/: BUILD  template.yaml
src/main/java/com/online_education/finance/command/: HelloWorldCommand.java
src/main/java/com/online_education/finance/server/: Component.java  FinanceServiceHandler.java  ServiceHandler.java
src/main/java/com/online_education/hello_world/: BUILD  template.yaml
src/main/java/com/online_education/hello_world/command/: HelloWorldCommand.java
src/main/java/com/online_education/hello_world/server/: HelloWorldComponent.java  HelloWorldServiceHandler.java
src/main/java/com/online_education/helloworld/: BUILD  template.yaml
src/main/java/com/online_education/helloworld/command/: HelloWorldCommand.java
src/main/java/com/online_education/helloworld/server/: HelloWorldComponent.java  HelloWorldServiceHandler.java
src/main/java/com/online_education/model/: ApiGatewayRequest.java  ApiGatewayResponse.java  BUILD
src/main/java/com/online_education/search/: BUILD  ElasticSearchModule.java  Indexer.java
src/main/java/com/online_education/server/: BUILD  Command.java
src/main/java/com/online_education/user/: BUILD  PreSignUpEvent.java  UserComponent.java  UserEvent.java  UserServiceHandler.java  template.yaml
src/main/java/com/online_education/user/command/: CreateUserCommand.java  HelloWorldCommand.java  IndexStudentCommand.java  PutUserCommand.java  TeacherCreateCommand.java  TeacherGetCommand.java  TeacherScanCommand.java  TeacherUpdateCommand.java  UserCreateCommand.java  UserGetCommand.java  UserRegisterCommand.java  UserUpdateCommand.java
src/main/java/com/online_education/user/server/: UserComponent.java  UserServiceHandler.java
src/main/java/com/online_education/usertest/: BUILD  template.yaml
src/main/java/com/online_education/usertest/command/: HelloWorldCommand.java
src/main/java/com/online_education/usertest/server/: UserTestComponent.java  UserTestServiceHandler.java
src/main/java/com/online_education/weather/: AWSResourceComponent.java  ApiGatewayRequest.java  ApiGatewayResponse.java  BUILD  WeatherComponent.java  WeatherEvent.java  WeatherEventLambda.java  WeatherQueryLambda.java  WeatherServiceHandler.java  template.yaml
src/main/java/com/online_education/weather/command/: CreateWeatherCommand.java  GetWeatherCommand.java
src/main/java/com/online_education/xueqiu/: BUILD  template.yaml
src/main/java/com/online_education/xueqiu/command/: HelloWorldCommand.java
src/main/java/com/online_education/xueqiu/server/: XueqiuComponent.java  XueqiuServiceHandler.java
src/main/java/com/weather/: ApiGatewayRequest.java  ApiGatewayResponse.java  BUILD  WeatherEvent.java  WeatherEventLambda.java  WeatherQueryLambda.java  template.yaml
src/main/java/com/weather2/: ApiGatewayRequest.java  ApiGatewayResponse.java  BUILD  WeatherEvent.java  WeatherEventLambda.java  WeatherQueryLambda.java
src/test/java/com/online_education/weather/: BUILD  WeatherEventLambdaTest.java
(+2 files in other folders)
