load("@rules_java//java:defs.bzl", "java_binary", "java_library")

java_library(
    name = "course_lib",
    srcs = glob([
        "*.java",
        "*/*.java"
    ]),
    deps = [
        "@maven//:com_amazonaws_aws_java_sdk_core",
        "@maven//:com_amazonaws_aws_lambda_java_core",
        "@maven//:com_amazonaws_aws_java_sdk_dynamodb",
        "//:lombok",
        "@maven//:com_amazonaws_aws_lambda_java_events",
        "//src/main/java/com/online_education/model",
        "//:dagger_with_errorprone",
        "//src/main/java/com/online_education/server",
        "//src/main/java/com/online_education/dagger:dynamodb_module",
        "//src/main/java/com/online_education/dagger:object_mapper_module",
        "//src/main/java/com/online_education/dao/course",
        "//:log",
    ],
)

java_binary(
    name = "course",
    runtime_deps = ["course_lib"],
)